--- a/slot-ts/package.json
+++ b/slot-ts/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "@types/core-js": "0.9.36",
-    "openfl": "^7.0.0",
-    "ts-loader": "^3.2.0",
-    "typescript": "^2.6.2",
-    "uglifyjs-webpack-plugin": "^1.1.4",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
+    "@types/core-js": "^2.5.2",
+    "npm-check": "^5.9.0",
+    "openfl": "^8.9.5",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
     "webpack-merge": "^4.1.1"
   },
   "scripts": {
@@ -18,7 +20,8 @@
     "build:prod": "webpack --config webpack.prod.js",
     "start": "npm run start:dev",
     "start:dev": "webpack-dev-server --open --config webpack.dev.js",
-    "start:prod": "webpack-dev-server --open --config webpack.prod.js"
+    "start:prod": "webpack-dev-server --open --config webpack.prod.js",
+    "upgrade": "npm-check -u"
   },
   "dependencies": {
     "@tweenjs/tween.js": "^18.5.0"
